Clean up config server tests
Some minor changes to non-test code, but no functional changes