@@ -3,7 +3,6 @@ package com.yahoo.vespa.config.server.http;
 
 import com.yahoo.container.jdisc.HttpRequest;
 import com.yahoo.container.jdisc.HttpResponse;
-import com.yahoo.container.logging.AccessLog;
 import com.yahoo.vespa.config.ConfigKey;
 import com.yahoo.vespa.config.server.rpc.MockRequestHandler;
 import com.yahoo.vespa.config.server.http.HttpListConfigsHandler.ListConfigsResponse;
@@ -13,7 +12,6 @@ import org.junit.Test;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.concurrent.Executor;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
@@ -23,7 +21,6 @@ import static com.yahoo.jdisc.http.HttpRequest.Method.GET;
 
 /**
  * @author Ulf Lilleengen
- * @since 5.1
  */
 public class HttpListConfigsHandlerTest {
     
@@ -34,9 +31,9 @@ public class HttpListConfigsHandlerTest {
     @Before
     public void setUp() {
         mockRequestHandler = new MockRequestHandler();
-        mockRequestHandler.setAllConfigs(new HashSet<ConfigKey<?>>() {{ 
+        mockRequestHandler.setAllConfigs(new HashSet<>() {{
             add(new ConfigKey<>("bar", "conf/id/", "foo"));
-            }} );
+        }} );
         HttpListConfigsHandler.Context ctx = HttpListConfigsHandler.testOnlyContext();
         handler = new HttpListConfigsHandler(ctx, mockRequestHandler);
         namedHandler = new HttpListNamedConfigsHandler(ctx, mockRequestHandler);
@@ -51,14 +48,14 @@ public class HttpListConfigsHandlerTest {
     @Test
     public void require_that_named_handler_can_be_created() throws IOException {
         HttpRequest req = HttpRequest.createTestRequest("http://foo.com:8080/config/v1/foo.bar/conf/id/", GET);
-        req.getJDiscRequest().parameters().put("http.path", Arrays.asList("foo.bar"));
+        req.getJDiscRequest().parameters().put("http.path", List.of("foo.bar"));
         HttpResponse response = namedHandler.handle(req);
         assertThat(SessionHandlerTest.getRenderedString(response), is("{\"children\":[],\"configs\":[]}"));
     }
     
     @Test
     public void require_child_listings_correct() {
-        Set<ConfigKey<?>> keys = new LinkedHashSet<ConfigKey<?>>() {{
+        Set<ConfigKey<?>> keys = new LinkedHashSet<>() {{
             add(new ConfigKey<>("name1", "id/1", "ns1"));
             add(new ConfigKey<>("name1", "id/1", "ns1"));
             add(new ConfigKey<>("name1", "id/2", "ns1"));
@@ -74,7 +71,7 @@ public class HttpListConfigsHandlerTest {
  
     @Test
     public void require_url_building_and_mimetype_correct() {
-        HttpListConfigsHandler.ListConfigsResponse resp = new ListConfigsResponse(new HashSet<ConfigKey<?>>(), null, "http://foo.com/config/v1/", true);
+        HttpListConfigsHandler.ListConfigsResponse resp = new ListConfigsResponse(new HashSet<>(), null, "http://foo.com/config/v1/", true);
         assertEquals(resp.toUrl(new ConfigKey<>("myconfig", "my/id", "mynamespace"), true), "http://foo.com/config/v1/mynamespace.myconfig/my/id");
         assertEquals(resp.toUrl(new ConfigKey<>("myconfig", "my/id", "mynamespace"), false), "http://foo.com/config/v1/mynamespace.myconfig/my/id/");
         assertEquals(resp.getContentType(), "application/json");
@@ -96,7 +93,7 @@ public class HttpListConfigsHandlerTest {
     
     @Test
     public void require_correct_error_response_on_no_model() throws IOException {
-        mockRequestHandler.setAllConfigs(new HashSet<ConfigKey<?>>());
+        mockRequestHandler.setAllConfigs(new HashSet<>());
         HttpResponse response = namedHandler.handle(HttpRequest.createTestRequest("http://yahoo.com:8080/config/v1/foo.bar/myid/", GET));
         HandlerTest.assertHttpStatusCodeErrorCodeAndMessage(response, NOT_FOUND,
                 HttpErrorResponse.errorCodes.NOT_FOUND,
